# aiml-notes

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  latex.md  main.py  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/ai/: ai.doctree
.doctrees/ai/categories/: generative.doctree  index.doctree  ml.doctree  nlp.doctree  nns.doctree  pinns.doctree
.doctrees/ai/development/: developing.doctree  fundamentals.doctree  index.doctree  math.doctree  metrics.doctree  resources.doctree  tokenization.doctree
.doctrees/ai/kaggle/: nlp_beginners_guide.doctree
.doctrees/ai/libraries/: index.doctree  pytorch.doctree
.doctrees/datacamp/: README.doctree  datacamp_notes.doctree
.doctrees/general/: classification.doctree  metrics.doctree
.doctrees/placeholder/: markdown.doctree  notebook.doctree  restructuredtext.doctree
.doctrees/portfolio/: portfolio.doctree
.doctrees/sphinx_examples/: index.doctree  markdown.doctree  notebook.doctree  restructuredtext.doctree
.github/workflows/: sphinx.yml
_downloads/6753074d1ac84df74a36867b9b2d54e8/: custom.css
_sources/: index.md  index.rst
_sources/ai/: ai.md
_sources/datacamp/: README.md
_sources/general/: classification.md
_sources/placeholder/: restructuredtext.rst
_sources/sphinx_examples/: markdown.md  notebook.ipynb  restructuredtext.rst
_static/: custom.css
ai/: ai.html
ai/categories/: generative.html  index.html  ml.html  nlp.html  nns.html  pinns.html
ai/development/: developing.html  fundamentals.html  index.html  math.html  metrics.html  resources.html  tokenization.html
ai/kaggle/: nlp_beginners_guide.html
ai/libraries/: index.html  pytorch.html
app/: app.py
datacamp/: README.html  datacamp_notes.html
datacamp/1_supervised_learning_scikit_learn/: 0_supervised_learning_scikit_learn.html  1_classification.html  1_classification.ipynb  2_regression.html
docs/: README..md  README.md  clean_make.bat  clean_make_launch.bat  make_launch.bat
docs/source/: conf.py  index.md  index.rst
gen_mach_learn/: numpy_pandas_check.ipynb
general/: classification.html  metrics.html
machine_learning_mastery/python_ml_mini_course/: 1_python_ml_mini_course.html  1_python_ml_mini_course.ipynb  numpy_pandas_check.html  numpy_pandas_check.ipynb
manimations/: example.py  manim.md
manimations/examples/: circle.py  different_rotations.py  square_and_circle.py  square_to_circle.py  square_to_circle_animated.py  transform_cycle.py  two_transforms.py
placeholder/: markdown.html  notebook.html  notebook.ipynb  restructuredtext.html
portfolio/: portfolio.html
portfolio/datacamp/: datacamp_notes.html  index.html  using_datacamp.html
portfolio/geeksforgeeks/: index.html  text-classification-scikit-learn.html
portfolio/kaggle/: index.html  metrics.html  nlp_beginners_guide.html  nlp_beginners_guide_noex.html
portfolio/machine_learning_mastery/: index.html
portfolio/shap/: index.html  shapley_xai_intro.html
source/: conf.py  index.rst
source/placeholder/: restructuredtext.rst
sphinx_examples/: index.html  markdown.html  notebook.html  restructuredtext.html
utils/: plotmaker.ipynb
(+106 files in other folders)
