[project]
name = "aiml-notes"
version = "0.1.0"
description = "Compilation of notes and examples for general machine learning and AI concepts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.1.1",
    "ipykernel>=6.30.0",
    "kaggle>=1.7.4.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1", # required for transformers with microsoft/deberta-v3-small
    "tensorflow>=2.20.0",
    "tiktoken>=0.11.0", # required for transformers with microsoft/deberta-v3-small
    "transformers>=4.56.2",
]

[dependency-groups]
app = [
    "streamlit>=1.47.1",
]
dev = [
    "mypy>=1.17.1", # for static type checking (run "mypy --install-types" to find missing stubs, then install with "uv add")
    "pandas-stubs>=2.3.2.250827",
]
docs = [
    "myst-nb>=1.3.0",
    "sphinx>=8.2.3",
    "sphinx-book-theme>=1.1.4",
    "sphinx-design>=0.6.1",
    "sphinxcontrib-mermaid>=1.0.0",
]
